--- a/css/socialsharingdefault.css
+++ b/css/socialsharingdefault.css
@@ -7,3 +7,6 @@
 .icon-social-googleplus {
  background-image: url('../img/googleplus.svg');
 }
+.icon-social-diaspora {
+ background-image: url('../img/diaspora.svg');
+}
