docs(reuse): Add SPDX header
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/socialsharing_telegram/css/socialsharing_telegram.css
+++ b/socialsharing_telegram/css/socialsharing_telegram.css
@@ -1,3 +1,8 @@
+/**
+ * SPDX-FileCopyrightText: 2017 Nextcloud GmbH and Nextcloud contributors
+ * SPDX-License-Identifier: AGPL-3.0-or-later
+ */
+
 .icon-social-telegram,
 [data-themes*=light] .icon-social-telegram {
 	background-image: url('../img/telegram.svg');
