--- a/socialsharing_facebook/css/socialsharing_facebook.css
+++ b/socialsharing_facebook/css/socialsharing_facebook.css
@@ -1,3 +1,8 @@
+/**
+ * SPDX-FileCopyrightText: 2017 Nextcloud GmbH and Nextcloud contributors
+ * SPDX-License-Identifier: AGPL-3.0-or-later
+ */
+
 .icon-social-facebook,
 [data-themes*=light] .icon-social-facebook {
 	background-image: url('../img/facebook.svg');
