fix: app icon color
Signed-off-by: Jana Peper <jana.peper@nextcloud.com>

--- a/socialsharing_email/css/socialsharing_email.css
+++ b/socialsharing_email/css/socialsharing_email.css
@@ -3,6 +3,6 @@
  * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 
-.icon-social-facebook {
-	background-image: url('../img/facebook.svg');
+.icon-social-mail {
+	background-image: url('../img/app.svg');
 }
